--- a/blog/_config.yml
+++ b/blog/_config.yml
@@ -13,7 +13,7 @@ timezone: ""
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: http://yoursite.com
+url: http://mofa.design/blog
 root: /blog
 permalink: :year/:month/:day/:title/
 permalink_defaults:
@@ -95,4 +95,6 @@ theme: landscape
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
-  type: ""
+  type: github
+  repo: https://github.com/moddz/moddz.github.io.git/blog
+  branch: gh-pages
