--- a/blog/_config.yml
+++ b/blog/_config.yml
@@ -95,6 +95,4 @@ theme: landscape
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
-  type: github
-  repo: https://github.com/moddz/moddz.github.io.git
-  branch: gh-pages
+  type: ""
